# deepclause-sdk

./: COMPILED_SPECS_DRAFT.md  README.md  analysis.md  package-lock.json  package.json
benchmarks/: .gitignore  DESIGN.md  README.md  RETRY_DESIGN.md  benchmark.env.example  config.example.json  config.nl2repo.example.json  config.qwen3.6-27b.json  deepplanning.sh  deepplanning_travel_plandml_vs_baseline  evaluate-deepplanning.mjs  evaluate-nl2repo.mjs  evaluate-predictions.mjs  nl2repo-PLAN.md  nl2repo.sh  prefetch-swebench-lite.mjs  run-deepplanning.mjs  run-nl2repo.mjs  run-swebench-lite.mjs  swebench.sh
benchmarks/deepplanning/: python-bridge.mjs  python-bridge.py  register-tools.mjs  shopping.dml  travel-plan-llm-verify.dml  travel-plan.dml  travel-planner.md  travel-v2.dml  travel-v3a.dml  travel-v3b.dml  travel-v4.dml  travel.dml
benchmarks/deepplanning/worker/: run-instance.mjs
benchmarks/docker/: evaluator.Dockerfile  worker.Dockerfile
benchmarks/nl2repo/worker/: plan.dml  run-instance.mjs
benchmarks/security/: README.md  run-security.mjs
benchmarks/security/cases/: CVE-2026-5199.json  CVE-2026-7474.json  GHSA-9f49-8x56-jmjc.json  GHSA-cc7p-2j3x-x7xf.json  GHSA-f26g-jm89-4g65.json  GHSA-j273-m5qq-6825.json  GHSA-mpxh-8fq3-x8mh.json  GHSA-w52v-v783-gw97.json  GHSA-x9h5-r9v2-vcww.json
benchmarks/test_server/: ANALYSIS.md  evaluation-results.json
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/: manifest.json
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/aiofiles/: Dockerfile.eval  evaluation.json  input.json  result.json
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/arguably/: Dockerfile.eval  evaluation.json  result.json
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/arguably/workspace/workspace/: pyproject.toml
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/arguably/workspace/workspace/arguably/: __init__.py  __main__.py  _argparse_extensions.py
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/arguably/workspace/workspace/arguably.egg-info/: requires.txt
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/arxiv-mcp-server/: Dockerfile.eval  evaluation.json  input.json  result.json
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/asteval/: Dockerfile.eval  evaluation.json  input.json
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/autopep8/workspace/workspace/: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  autopep8.py  install_hooks.bash  pyproject.toml  test_autopep8.py  tox.ini  update_readme.py
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/autopep8/workspace/workspace/hooks/: pre-push
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/autorccar/workspace/workspace/: environment.yml  pyproject.toml
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/autorccar/workspace/workspace/autorccar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/autorccar/workspace/workspace/computer/: __init__.py  collect_training_data.py  model.py  rc_driver.py  rc_driver_helper.py
benchmarks/test_server/nl2repo-2026-06-21T16-32-54-674Z/plan-execute/instances/autorccar/workspace/workspace/computer/tests/: test_autorccar.py
benchmarks/test_server/plan-execute/instances/arguably/: input.json
benchmarks/test_server/plan-execute/instances/asteval/: result.json
benchmarks/worker/: bootstrap-swebench.sh  build-swebench-images.py  plan.dml  run-instance.mjs
deepclause-skill-dev/deepclause-cli/: SKILL.md
dml-examples/: arxiv-researcher.dml  data-analysis.dml  image-analyzer.dml  literature-review.dml  markdown-to-pdf.dml  shopping-list.dml
docs/specs/: verification_requirements.md
sdk-examples/: README.md  basic-usage.ts  deep-research.ts  neurosymbolic.ts  quick-start.ts
src/: agent.ts  compaction.ts  compiler.ts  compiler_prompt.ts  index.ts  runner.ts  sdk.ts  tools.ts  types.ts
src/cli/: commands.ts  compile.ts  config.ts  default-skills.ts  index.ts  interactive.ts  prompt.ts  run.ts  search.ts  tool-args.ts  tools.ts  tui.ts
src/prolog/: bridge.ts  loader.ts
src/prolog-src/: deepclause_analysis.pl  deepclause_mi.pl  deepclause_strings.pl
src/system/assets/: index.ts  model-database.json
src/system/assets/compactors/: default-loop-compactor.dml  default-session-compactor.dml
src/system/assets/docs/: CONDUCTOR_PROMPT.md  DML_COMPILER_PROMPT.md  TUI.md
src/system/assets/recipes/deepclause-coding-workflow/: SKILL.md
src/system/assets/skills/: conductor.dml  deep-planner.dml  plan.dml  security-planner.dml  skill-creator.dml
src/system/config/: model-database.ts  model-slots.ts
src/system/runtime/: agentvm-manager.ts  catalog-recipes.ts  catalog-skills.ts  conductor.ts  console-capture.ts  dml-executor.ts  dml-params.ts  runtime-tools.ts  shell-manager.ts  shell-tool-events.ts  skill-creator.ts  token-usage.ts
tests/: agent.test.ts  benchmark_consistency.ts  bridge.test.ts  cancellation.test.ts  catalog-recipes.test.ts  catalog-skills.test.ts  cli.test.ts  compaction-config.test.ts  compaction.test.ts  compile-trace.test.ts  compile.test.ts  compile_analysis.test.ts  conductor.test.ts  config.test.ts  consistency_agent.dml  console-capture.test.ts  default-compactor.test.ts  init-default-skills.test.ts  language-features.test.ts  llm-primitive.test.ts  model-database.test.ts  run-child-events.test.ts  runner.test.ts  runtime-tools-skill-catalog.test.ts  shell-manager.test.ts  skill-creator.test.ts  stats.ts  system-assets.test.ts  tui.test.ts
tests/fixtures/: analysis_test.dml  implicit_taint_test.dml  multi_hop_taint.dml  param_taint_test.dml
(+122 files in other folders)
