[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arguably"
version = "1.0.0"
description = "A modern and user-friendly Python command-line argument parsing library"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
authors = [
    {name = "Arguably Contributors"}
]
keywords = ["cli", "argument-parsing", "argparse", "decorators", "type-hints"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
dependencies = [
    "docstring_parser>=0.16",
    "typing_extensions>=4.14.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "coverage>=7.10.2",
    "pytest-cov>=6.2.1",
]

[project.urls]
Homepage = "https://github.com/arguably/arguably"
Documentation = "https://arguably.readthedocs.io/"
Repository = "https://github.com/arguably/arguably"
Issues = "https://github.com/arguably/arguably/issues"

[tool.setuptools.packages.find]
include = ["arguably*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["arguably"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
