[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopep8"
version = "2.3.2"
description = "Automatically formats Python code to conform to the PEP 8 style guide"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Hideo Hattori", email = "hideo.hattori.nng@gmail.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pycodestyle >= 2.12.0",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pydiff >= 0.1.2",
    "pytest >= 8.0.0",
]

[project.scripts]
autopep8 = "autopep8:main"

[project.urls]
Homepage = "https://github.com/hhatto/autopep8"
Changelog = "https://github.com/hhatto/autopep8/blob/master/CHANGE"

[tool.setuptools]
py-modules = ["autopep8"]

[tool.autopep8]
max_line_length = 79
