[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autorccar"
version = "1.0.0"
description = "Autonomous remote-controlled car system with real-time video processing, neural network model training, and intelligent driving decision-making"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
authors = [
    {name = "AutoRCCar Contributors"}
]
keywords = [
    "autonomous-driving",
    "rc-car",
    "neural-network",
    "object-detection",
    "opencv",
    "raspberry-pi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "opencv-python==4.12.0.88",
    "numpy==2.2.6",
    "scikit-learn==1.7.1",
    "pygame==2.6.1",
    "pyserial==3.5",
    "pillow==11.3.0",
    "matplotlib==3.10.5",
    "scipy==1.16.1",
    "Cython==3.1.3",
    "PyYAML==6.0.2",
    "requests==2.32.5",
    "joblib==1.5.1",
    "threadpoolctl==3.6.0",
    "six==1.17.0",
    "typing_extensions==4.14.1",
    "packaging==25.0",
    "iniconfig==2.1.0",
    "pluggy==1.6.0",
    "pytest==8.4.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.59.1",
    "kiwisolver==1.4.9",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "certifi==2025.8.3",
    "urllib3==2.5.0",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "decorator==5.2.1",
    "Pygments==2.19.2",
    "prompt_toolkit==3.0.51",
    "parso==0.8.4",
    "jedi==0.19.2",
    "traitlets==5.14.3",
    "comm==0.2.3",
    "matplotlib-inline==0.1.7",
    "psutil==7.0.0",
    "ipython==9.4.0",
    "ipykernel==6.30.1",
    "debugpy==1.8.16",
    "pyzmq==27.0.1",
    "tornado==6.5.2",
    "jupyter_core==5.8.1",
    "platformdirs==4.3.8",
    "jupyter_client==8.6.3",
    "nest-asyncio==1.6.0",
    "ipywidgets==8.1.7",
    "widgetsnbextension==4.0.14",
    "ipython_pygments_lexers==1.1.1",
    "stack-data==0.6.3",
    "pure_eval==0.2.3",
    "executing==2.2.0",
    "asttokens==3.0.0",
    "wcwidth==0.2.13",
    "pexpect==4.9.0",
    "ptyprocess==0.7.0",
    "anyio==4.10.0",
    "sniffio==1.3.1",
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "h11==0.16.0",
    "beautifulsoup4==4.13.4",
    "soupsieve==2.7",
    "notebook==7.4.5",
    "jupyter==1.1.1",
    "jupyterlab==4.4.6",
    "jupyter_server==2.16.0",
    "jupyterlab_server==2.27.3",
    "jupyter-lsp==2.2.6",
    "jupyter_server_terminals==0.5.3",
    "notebook_shim==0.2.4",
    "jupyterlab_widgets==3.0.15",
    "jupyterlab_pygments==0.3.0",
    "jupyter-console==6.6.3",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nbclient==0.10.2",
    "terminado==0.18.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "referencing==0.36.2",
    "rpds-py==0.27.0",
    "json5==0.12.1",
    "Send2Trash==1.8.3",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "cffi==1.17.1",
    "pycparser==2.22",
    "arrow==1.3.0",
    "types-python-dateutil==2.9.0.20250809",
    "babel==2.17.0",
    "bleach==6.2.0",
    "webencodings==0.5.1",
    "defusedxml==0.7.1",
    "mistune==3.1.3",
    "pandocfilters==1.5.1",
    "tinycss2==1.4.0",
    "fastjsonschema==2.21.2",
    "overrides==7.7.0",
    "prometheus_client==0.22.1",
    "websocket-client==1.8.0",
    "jupyter-events==0.12.0",
    "python-json-logger==3.3.0",
    "rfc3339-validator==0.1.4",
    "isoduration==20.11.0",
    "uri-template==1.3.0",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "lark==1.2.2",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "fqdn==1.5.1",
    "jsonpointer==3.0.0",
    "webcolors==24.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[project.urls]
Homepage = "https://github.com/autorccar/AutoRCCar"
Documentation = "https://github.com/autorccar/AutoRCCar/blob/main/README.md"
Repository = "https://github.com/autorccar/AutoRCCar"
Issues = "https://github.com/autorccar/AutoRCCar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["computer*", "arduino*", "raspberryPi*", "Traffic_signal*"]
namespaces = false

[tool.setuptools.package-data]
"computer.cascade_xml" = ["*.xml"]
"computer.chess_board" = ["*.jpg"]
"arduino" = ["*.ino", "*.md"]
"raspberryPi" = ["*.py"]
"Traffic_signal" = ["*.ino", "*.jpg", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
